[gd_scene load_steps=4 format=3 uid="uid://bpsmc86rph40y"]

[ext_resource type="FontFile" uid="uid://2lqsxrhh33m3" path="res://Roboto-BoldItalic.ttf" id="1_d1n2s"]
[ext_resource type="Theme" uid="uid://d27uqo5gxeefi" path="res://scene/themes/theme.tres" id="1_pwg60"]
[ext_resource type="Script" path="res://scene/main.gd" id="1_w4ofj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_right = -36.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_pwg60")
script = ExtResource("1_w4ofj")

[node name="days_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -419.0
offset_bottom = 419.0
grow_horizontal = 2
grow_vertical = 2

[node name="samdi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Samdi"

[node name="MarginContainer6" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Dimanche" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Dimanche"

[node name="MarginContainer5" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="lundi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Lundi"

[node name="MarginContainer4" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="mardi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Mardi"

[node name="MarginContainer3" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="mercredi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Mercredi"

[node name="MarginContainer2" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="jeudi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Jeudi"

[node name="MarginContainer" type="MarginContainer" parent="days_container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="vendredi" type="Button" parent="days_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_d1n2s")
theme_override_font_sizes/font_size = 48
text = "Vendredi"

[connection signal="pressed" from="days_container/samdi" to="." method="_on_samdi_pressed"]
[connection signal="pressed" from="days_container/Dimanche" to="." method="_on_dimanche_pressed"]
[connection signal="pressed" from="days_container/lundi" to="." method="_on_lundi_pressed"]
[connection signal="pressed" from="days_container/mardi" to="." method="_on_mardi_pressed"]
[connection signal="pressed" from="days_container/mercredi" to="." method="_on_mercredi_pressed"]
[connection signal="pressed" from="days_container/jeudi" to="." method="_on_jeudi_pressed"]
[connection signal="pressed" from="days_container/vendredi" to="." method="_on_vendredi_pressed"]
